// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createPost should match the last snapshot 1`] = `
Object {
  "graphql": Object {
    "query": "mutation (
        $type: String
        $title: String
        $details: String
        $groupIds: [String]
        $startTime: Date
        $endTime: Date
        $location: String
        $locationId: ID
        $imageUrls: [String]
        $fileUrls: [String]
        $announcement: Boolean
        $topicNames: [String]
        $memberIds: [ID]        
      ) {
        createPost(data: {
          type: $type
          title: $title
          details: $details
          groupIds: $groupIds
          startTime: $startTime
          endTime: $endTime
          location: $location
          locationId: $locationId
          imageUrls: $imageUrls
          fileUrls: $fileUrls
          announcement: $announcement
          topicNames: $topicNames
          memberIds: $memberIds
        }) {
          
  id
  announcement
  title
  details
  type
  creator {
    id
    name
    avatarUrl
  }
  createdAt
  updatedAt
  isPublic
  fulfilledAt
  startTime
  endTime
  myEventResponse
  commenters(first: 3) {
    id
    name
    avatarUrl
  }
  commentersTotal
  
  linkPreview {
    id
    title
    url
    imageUrl
  }
  location
  locationObject {
    id
    addressNumber
    addressStreet
    bbox {
      lat
      lng
    }
    center {
      lat
      lng
    }
    city
    country
    fullText
    locality
    neighborhood
    region
  }
  votesTotal
  myVote
  groups {
    id
    name
    slug
    settings {
      publicMemberDirectory
    }
  }
  attachments {
    type
    url
    position
    id
  }
  postMemberships {
    id
    pinned
    group {
      id
    }
  }
  topics {
    id
    name
    postsTotal
    followersTotal
  }
  members {
    total
    hasMore
    items {
      id
      name
      avatarUrl
      bio
      tagline
      location
    }
  }
  eventInvitations {
    total
    hasMore
    items {
      id
      response
      person {
        id
        name
        avatarUrl
        bio
        tagline
        location
      }
    }
  }

        }
      }",
    "variables": Object {
      "announcement": undefined,
      "details": "details",
      "endTime": "endTime",
      "fileUrls": Array [],
      "groupIds": Array [
        undefined,
      ],
      "imageUrls": Array [],
      "location": undefined,
      "locationId": undefined,
      "memberIds": Array [],
      "startTime": "startTime",
      "title": "title",
      "topicNames": Array [],
      "type": "post",
    },
  },
  "meta": Object {
    "analytics": Object {
      "detailsLength": 7,
      "eventName": "Post Created",
      "isAnnouncement": undefined,
    },
    "extractModel": Object {
      "getRoot": [Function],
      "modelName": "Post",
    },
  },
  "type": "PostEditor/CREATE_POST",
}
`;

exports[`createProject should match the last snapshot 1`] = `
Object {
  "graphql": Object {
    "query": "mutation (
        $type: String
        $title: String
        $details: String
        $groupIds: [String]
        $startTime: Date
        $endTime: Date
        $location: String
        $locationId: ID
        $imageUrls: [String]
        $fileUrls: [String]
        $announcement: Boolean
        $topicNames: [String]
        $memberIds: [ID]        
      ) {
        createPost(data: {
          type: $type
          title: $title
          details: $details
          groupIds: $groupIds
          startTime: $startTime
          endTime: $endTime
          location: $location
          locationId: $locationId
          imageUrls: $imageUrls
          fileUrls: $fileUrls
          announcement: $announcement
          topicNames: $topicNames
          memberIds: $memberIds
        }) {
          
  id
  announcement
  title
  details
  type
  creator {
    id
    name
    avatarUrl
  }
  createdAt
  updatedAt
  isPublic
  fulfilledAt
  startTime
  endTime
  myEventResponse
  commenters(first: 3) {
    id
    name
    avatarUrl
  }
  commentersTotal
  
  linkPreview {
    id
    title
    url
    imageUrl
  }
  location
  locationObject {
    id
    addressNumber
    addressStreet
    bbox {
      lat
      lng
    }
    center {
      lat
      lng
    }
    city
    country
    fullText
    locality
    neighborhood
    region
  }
  votesTotal
  myVote
  groups {
    id
    name
    slug
    settings {
      publicMemberDirectory
    }
  }
  attachments {
    type
    url
    position
    id
  }
  postMemberships {
    id
    pinned
    group {
      id
    }
  }
  topics {
    id
    name
    postsTotal
    followersTotal
  }
  members {
    total
    hasMore
    items {
      id
      name
      avatarUrl
      bio
      tagline
      location
    }
  }
  eventInvitations {
    total
    hasMore
    items {
      id
      response
      person {
        id
        name
        avatarUrl
        bio
        tagline
        location
      }
    }
  }

        }
      }",
    "variables": Object {
      "announcement": undefined,
      "details": "details",
      "endTime": "endTime",
      "fileUrls": Array [],
      "groupIds": Array [
        undefined,
      ],
      "imageUrls": Array [],
      "location": undefined,
      "locationId": undefined,
      "memberIds": Array [
        1,
        2,
        3,
      ],
      "startTime": "startTime",
      "title": "title",
      "topicNames": Array [],
      "type": "post",
    },
  },
  "meta": Object {
    "analytics": Object {
      "detailsLength": 7,
      "eventName": "Post Created",
      "isAnnouncement": undefined,
    },
    "extractModel": Object {
      "getRoot": [Function],
      "modelName": "Post",
    },
  },
  "type": "PostEditor/CREATE_POST",
}
`;

exports[`updatePost should match the last snapshot 1`] = `
Object {
  "graphql": Object {
    "query": "mutation ($id: ID
        $type: String
        $title: String
        $details: String
        $groupIds: [String]
        $startTime: Date
        $endTime: Date
        $location: String
        $locationId: ID
        $imageUrls: [String]
        $fileUrls: [String]
        $topicNames: [String]
        $memberIds: [ID]        
      ) {
        updatePost(id: $id, data: {
          type: $type
          title: $title
          details: $details
          groupIds: $groupIds
          startTime: $startTime
          endTime: $endTime
          location: $location
          locationId: $locationId
          imageUrls: $imageUrls
          fileUrls: $fileUrls
          topicNames: $topicNames
          memberIds: $memberIds
        }) {
          
  id
  announcement
  title
  details
  type
  creator {
    id
    name
    avatarUrl
  }
  createdAt
  updatedAt
  isPublic
  fulfilledAt
  startTime
  endTime
  myEventResponse
  commenters(first: 3) {
    id
    name
    avatarUrl
  }
  commentersTotal
  comments(first: 10, order: \\"desc\\") {
    items {
      
  id
  text
  creator {
    id
    name
    avatarUrl
  }
  attachments {
    id
    position
    type
    url
  }
  parentComment {
    id
  }
  createdAt

      childComments(first: 10, order: \\"desc\\") {
        items {
          
  id
  text
  creator {
    id
    name
    avatarUrl
  }
  attachments {
    id
    position
    type
    url
  }
  parentComment {
    id
  }
  createdAt

          post {
            id
          }
        }
        total
        hasMore
      }
    }
    total
    hasMore
  }
  linkPreview {
    id
    title
    url
    imageUrl
  }
  location
  locationObject {
    id
    addressNumber
    addressStreet
    bbox {
      lat
      lng
    }
    center {
      lat
      lng
    }
    city
    country
    fullText
    locality
    neighborhood
    region
  }
  votesTotal
  myVote
  groups {
    id
    name
    slug
    settings {
      publicMemberDirectory
    }
  }
  attachments {
    type
    url
    position
    id
  }
  postMemberships {
    id
    pinned
    group {
      id
    }
  }
  topics {
    id
    name
    postsTotal
    followersTotal
  }
  members {
    total
    hasMore
    items {
      id
      name
      avatarUrl
      bio
      tagline
      location
    }
  }
  eventInvitations {
    total
    hasMore
    items {
      id
      response
      person {
        id
        name
        avatarUrl
        bio
        tagline
        location
      }
    }
  }

        }
      }",
    "variables": Object {
      "details": "details",
      "endTime": "endTime",
      "fileUrls": Array [],
      "groupIds": Array [
        undefined,
      ],
      "id": 1,
      "imageUrls": Array [],
      "location": undefined,
      "locationId": undefined,
      "memberIds": Array [],
      "startTime": "startTime",
      "title": "title",
      "topicNames": Array [],
      "type": "post",
    },
  },
  "meta": Object {
    "analytics": Object {
      "detailsLength": 7,
      "eventName": "Post Updated",
    },
    "extractModel": Object {
      "append": false,
      "getRoot": [Function],
      "modelName": "Post",
    },
  },
  "type": "PostEditor/UPDATE_POST",
}
`;
